--- a/roles/deploy_nginx_balancer/templates/nginx.conf.j2
+++ b/roles/deploy_nginx_balancer/templates/nginx.conf.j2
@@ -6,9 +6,9 @@ events {
 }
 http {
 upstream localhost{
-    server "{{ name_web_app1 }}":"{{ web_app_listen_port}}"; 
-    server "{{ name_web_app2 }}":"{{ web_app_listen_port }}";
-    server "{{ name_web_app3 }}":"{{ web_app_listen_port }};
+    server {{ name_web_app1 }}:{{ web_app_listen_port}}; 
+    server {{ name_web_app2 }}:{{ web_app_listen_port }};
+    server {{ name_web_app3 }}:{{ web_app_listen_port }};
 	}
 server {
     listen "{{ nginx_listen_port }}";
